# todo-list-cpp

./: .gitignore  CMakeLists.txt  Dependencies.cmake  LICENSE  README.md  vcpkg.json
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
App/: CMakeLists.txt
App/Source/: AppLayer.cpp  AppLayer.h  AppResources.cpp  AppResources.h  Main.cpp
App/Source/Model/: AuthManager.cpp  AuthManager.h  ListManager.cpp  ListManager.h  Task.cpp  Task.h  TaskList.cpp  TaskList.h  TaskManager.cpp  TaskManager.h  Utilities.cpp  Utilities.h
App/Source/UI/: AppLayer.cpp  AppLayer.h  AuthLayer.cpp  AuthLayer.h  BaseLayer.h  DebugLayer.cpp  DebugLayer.h  Theme.h
Core/: CMakeLists.txt
Core/Source/Core/: Application.cpp  Application.h  Event.h  Layer.cpp  Layer.h  Window.cpp  Window.h
include/: App.h  Task.h  TaskList.h
src/: App.cpp  Task.cpp  TaskList.cpp  main.cpp
